--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,7 +1,14 @@
 body {
     overflow-x: hidden;
     box-sizing: border-box;
-    background-image: linear-gradient(to right, rgb(158, 158, 158), rgb(238, 238, 238), #fff) !important;
+    /* background-color: rgb(238, 238, 238) !important; */
+    /* background-image: linear-gradient(to right, rgb(158, 158, 158), rgb(238, 238, 238), #fff) !important; */
+    /* background-image: url("../Images/LeftBG.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover; */
+    max-width: 100vw;
 }
 
 .grad-bar {
@@ -54,7 +61,7 @@ body {
 }
 
 nav {
-    background-image: linear-gradient(to right, rgb(158, 158, 158), rgb(238, 238, 238), #fff) !important;
+    /* background-image: linear-gradient(to right, rgb(158, 158, 158), rgb(238, 238, 238), #fff) !important; */
 }
 
 nav img {
@@ -103,6 +110,10 @@ a.nav-link:hover {
     text-align: center;
 }
 
+.headblue {
+    color: #263C97;
+}
+
 .Para {
     font-weight: 450;
     margin-bottom: 25px;
@@ -138,11 +149,15 @@ a.nav-link:hover {
 
 #Partners {
     margin-top: 25px;
+    background-color: #2a3758;
+    padding-bottom: 3rem;
 }
 
 #parap {
+    padding-top: 3rem;
     margin-bottom: 35px;
     font-size: 50px;
+    color: #fff;
 }
 
 #PartnerLogos {
@@ -160,8 +175,8 @@ a.nav-link:hover {
     align-items: center;
     height: 15rem;
     border-radius: 50px;
-    background: #dedede;
-    box-shadow: 20px 20px 61px #a0a0a0, -20px -20px 61px #ffffff;
+    background: #eeeeee;
+    /* box-shadow: 20px 20px 61px #a0a0a0, -20px -20px 61px #ffffff; */
 }
 
 .logoimg {
@@ -174,7 +189,7 @@ a.nav-link:hover {
 .contact-part {
     background-color: #252934;
     color: #fff;
-    margin-top: 2rem;
+    /* margin-top: 2rem; */
 }
 
 .contact-part #contact {
