--- a/1/CSS/index.css
+++ b/1/CSS/index.css
@@ -1,13 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body {
     overflow-x: hidden;
     box-sizing: border-box;
-    /* background-color: rgb(238, 238, 238) !important; */
-    /* background-image: linear-gradient(to right, rgb(158, 158, 158), rgb(238, 238, 238), #fff) !important; */
-    /* background-image: url("../Images/LeftBG.png");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover; */
     max-width: 100vw;
 }
 
@@ -61,7 +55,6 @@ body {
 }
 
 nav {
-    /* background-image: linear-gradient(to right, rgb(158, 158, 158), rgb(238, 238, 238), #fff) !important; */
     background: #1B242F !important;
 }
 
@@ -117,10 +110,9 @@ button.navbar-toggler {
     }
 }
 
-#trial {
+#MainData {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../Images/divbg.jpg);
     background-position: center top;
-    /* background-image: url(../Images/divbg2.jpg); */
     height: 75vh;
     box-shadow: inset 40.12px 40.12px 48px #000, inset -40.12px -40.12px 48px #000;
     font-family: 'Rubik', sans-serif;
@@ -128,15 +120,16 @@ button.navbar-toggler {
     text-align: center;
 }
 
-.borderb {
+#IntroHead {
+    padding-top: 3rem;
+    margin-bottom: 35px;
     font-size: 4rem !important;
-    font-weight: 800;
+    font-weight: 700;
     color: #fff !important;
     padding-top: 20px !important;
-    /* margin-top: -20px; */
 }
 
-.borderb2 {
+#IntroContent {
     font-size: 1.4rem;
     font-weight: 500 !important;
     text-align: justify;
@@ -145,7 +138,7 @@ button.navbar-toggler {
     margin-bottom: 40px !important;
 }
 
-#btngit2 {
+#IntroButton {
     color: #fff;
     font-weight: bold;
     background-color: #263C97;
@@ -157,31 +150,11 @@ button.navbar-toggler {
     transition: all 0.4s ease-in-out;
 }
 
-#btngit2:hover {
+#IntroButton:hover {
     color: #fff;
     background-color: #fff;
     border: 3px solid #fff;
     color: #263C97;
-}
-
-#MainData {
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-areas: 'intro vector';
-}
-
-.box {
-    margin-top: 3vh;
-    font-family: 'Rubik', sans-serif;
-}
-
-#intro {
-    grid-area: intro;
-    width: 50vw;
-    padding: 0px 100px;
-    text-align: justify;
-    text-align-last: center;
-    margin: auto;
 }
 
 .Heading {
@@ -190,53 +163,17 @@ button.navbar-toggler {
     text-align: center;
 }
 
-.headblue {
-    color: #263C97;
-}
-
-.Para {
-    font-weight: 450;
-    margin-bottom: 25px;
-}
-
-#btngit {
-    color: #263C97;
-    font-weight: bold;
-    background-color: transparent;
-    padding: 15px;
-    border: 2px solid #263C97;
-    cursor: pointer;
-    font-size: 13px;
-    border-radius: 25px;
-    transition: all 0.4s ease-in-out;
-}
-
-#btngit:hover {
-    color: #fff;
-    background-color: #263C97;
-    border: 2px solid #263C97;
-}
-
-#vector {
-    text-align: center;
-    margin: auto;
-    grid-area: vector;
-}
-
-#vecimg {
-    width: 50vw;
-}
-
 #Partners {
     background-color: #181f31;
     padding-bottom: 3rem;
 }
 
-#parap {
+#PartnersHead {
     padding-top: 3rem;
-    margin-bottom: 35px;
-    font-size: 50px;
-    color: #fff;
+    font-size: 4rem !important;
+    font-weight: 700;
+    color: #fff !important;
+    padding-top: 20px !important;
 }
 
 #PartnerLogos {
@@ -272,7 +209,6 @@ button.navbar-toggler {
 .contact-part {
     background-color: #252934;
     color: #fff;
-    /* margin-top: 2rem; */
 }
 
 .contact-part #contact {
@@ -426,7 +362,7 @@ iframe {
     nav img {
         margin-left: 0px;
     }
-    #trial {
+    #MainData {
         padding: 1rem;
         padding-bottom: 2rem;
         height: auto;
