--- a/CSS/firms.css
+++ b/CSS/firms.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 /* CSS For Scroll Bar  */
 
 ::-webkit-scrollbar-track {
@@ -98,162 +96,31 @@ button.navbar-toggler {
 }
 
 
-/* Sidebar starts here */
-
-.wrapper {
-    display: flex;
-    width: 100%;
-    align-items: stretch;
-}
-
-#sidebar {
-    min-width: 250px;
-    max-width: 250px;
-    min-height: calc(100vh - 205.375px);
-    max-height: calc(100vh - 205.375px);
-    background: #1B242F;
-    color: #fff;
-    transition: all 0.3s;
-    font-family: 'Rubik', sans-serif;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    /* overflow-y: auto; */
-    /* overflow-y: hidden; */
-}
-
-#sidebar.active {
-    margin-left: -250px;
-}
-
-#sidebar ul.components {
-    padding: 20px 0;
-}
-
-#sidebar ul li a {
-    padding: 10px;
-    font-size: 1.1em;
-    display: block;
-    color: #fff;
-}
-
-#sidebar ul li a:hover {
-    color: #4E6FF1;
-    /* background: #fff; */
-    text-decoration: none;
-}
-
-#sidebar ul li.active>a,
-a[aria-expanded="true"] {
-    color: #4E6FF1 !important;
-    background: #181F31;
-}
-
-a[data-toggle="collapse"] {
-    position: relative;
-}
-
-.dropdown-toggle::after {
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
-}
-
-ul ul a {
-    font-size: 0.9em !important;
-    padding-left: 30px !important;
-    background: #181F31;
-}
-
-ul ul ul a {
-    padding-left: 50px !important;
-}
-
-#sidebarCollapse {
-    background-color: #FF9900 !important;
-    border-color: #FF9900 !important;
-    border-top-left-radius: 0px !important;
-    border-bottom-left-radius: 0px !important;
-}
-
-
-/* Media query of side bar  */
-
-@media (max-width: 768px) {
-    #sidebar {
-        margin-left: -250px;
-    }
-    #sidebar.active {
-        margin-left: 0;
-    }
-    #sidebarCollapse span {
-        display: none;
-    }
-    .blankdiv {
-        display: none;
-    }
-}
-
-
-/* CSS for SideBar ends here  */
-
-
-/* CSS for Main Content starts here  */
-
-#Products {
-    max-height: calc(100vh - 205.375px);
-    overflow-y: scroll;
-    overflow-x: hidden;
-}
-
-.blankdiv {
-    width: 800px;
-    height: 10px;
-    background-color: transparent !important;
-    border: 0px !important;
-}
+/* CSS For nac ends here  */
 
 .dflex {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
 }
 
-.productimg {
-    padding-top: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin: 10px;
-    max-width: 95vw;
-    border: 4px solid #FF9900;
-    border-radius: 10px;
-    background-color: #1B242F;
-    box-shadow: #1B242F 0px 5px 12px;
-    text-align: center;
-}
-
-.productimg img {
-    margin-bottom: 10px;
-    border-radius: 5px;
-    max-width: 100%;
-    max-height: 300px;
-}
-
-.fullimg {
-    max-height: 100% !important;
-}
-
-.productimg p {
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin: 0px !important;
+#CStext {
     text-align: center;
     font-family: 'Rubik', sans-serif;
-    font-weight: 500;
-    font-size: 1.2rem;
-    color: #fff;
+    font-size: 4rem;
+}
+
+#CSimage img {
+    max-width: 60vw;
+}
+
+@media only screen and (max-width: 768px) {
+    #CStext {
+        font-size: 3.5rem;
+    }
+    #CSimage img {
+        max-width: 99vw;
+    }
 }
 
 
@@ -276,6 +143,7 @@ ul ul ul a {
 }
 
 #footer .footer-icons {
+    margin-top: 1.5rem;
     padding-top: 1.5rem;
     text-align: center;
     margin-bottom: 20px;
