--- a/CSS/Products.css
+++ b/CSS/Products.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
 
 /* CSS For Scroll Bar  */
 
@@ -14,7 +15,7 @@
 
 ::-webkit-scrollbar-thumb {
     background-color: #4E6FF1;
-    border: 2px solid #eee;
+    /* border: 2px solid #eee; */
 }
 
 ::-moz-selection {
@@ -235,7 +236,8 @@ ul ul ul a {
 }
 
 .productimg img {
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
+    margin-bottom: 5px;
     border-radius: 5px;
     max-width: 100%;
     max-height: 300px;
@@ -246,14 +248,16 @@ ul ul ul a {
 }
 
 .productimg p {
-    padding-top: 5px;
+    /* padding-top: 5px; */
     padding-bottom: 5px;
     margin: 0px !important;
     text-align: center;
-    font-family: 'Rubik', sans-serif;
+    /* font-family: 'Rubik', sans-serif; */
+    font-family: 'Staatliches', cursive;
     font-weight: 500;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     color: #fff;
+    letter-spacing: 1px;
 }
 
 
