--- a/CSS/homepage.css
+++ b/CSS/homepage.css
@@ -1,5 +1,6 @@
     @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
     /* CSS For Scroll Bar  */
     
      ::-webkit-scrollbar-track {
@@ -33,7 +34,7 @@
     }
     
     body {
-        overflow-x: hidden;
+        overflow-x: hidden !important;
         box-sizing: border-box !important;
         max-width: 100vw;
     }
@@ -112,8 +113,8 @@
     
     #MainData {
         position: absolute;
-        width: 75vw;
-        top: 50%;
+        width: 100vw;
+        top: 60%;
         transform: translate(0, -10%);
         font-family: 'Rubik', sans-serif;
         padding: 5rem 5.5rem;
@@ -123,17 +124,22 @@
     #IntroContent {
         text-shadow: 3px 3px 20px #000, -2px 1px 30px #000;
         line-height: 34px;
-        font-size: 1.6rem;
+        font-size: 2rem;
         font-weight: 500 !important;
         text-align: justify;
         color: #fff !important;
         margin-bottom: 40px !important;
     }
     
+    .introline {
+        font-size: 2.2rem;
+    }
+    
     #IntroButton {
         color: #fff;
         font-weight: bold;
         background-color: #263C97;
+        text-decoration: none;
         padding: 15px;
         border: 3px solid #fff;
         cursor: pointer;
@@ -151,17 +157,20 @@
     
     .Heading {
         font-weight: 600;
-        font-family: 'Berkshire Swash', cursive;
+        /* font-family: 'Rubik', sans-serif; */
         /* word-spacing: 5px; */
-        letter-spacing: 3px;
+        /* letter-spacing: 3px; */
+        font-family: 'Secular One', sans-serif;
         text-align: center;
     }
     
     #CEOmessage {
-        font-family: rubik;
-        padding-top: 2rem;
+        font-family: 'Rubik', sans-serif;
+        padding-top: 1.8rem;
+        padding-right: 5rem;
         color: #000;
         background-color: #fff;
+        text-align: justify;
     }
     
     #ceopic {
@@ -182,27 +191,34 @@
     
     #ceotext {
         font-size: 1.25rem;
-        font-weight: 500;
+        font-weight: 550;
     }
     
     .CEOhead {
-        letter-spacing: 3px;
-        font-family: 'Berkshire Swash', cursive;
+        text-align: left;
+        /* letter-spacing: 3px; */
+        /* font-family: 'Berkshire Swash', cursive; */
+        font-family: 'Secular One', sans-serif;
         font-size: 3.65rem;
         font-weight: 700;
     }
     
+    #abouthead {
+        text-align: right;
+    }
+    
     #AboutUs {
-        font-family: rubik;
+        font-family: 'Rubik', sans-serif;
         color: #fff;
         background-color: #12192b;
-        text-align: right;
+        text-align: justify;
         margin-top: 20px !important;
         border-top-left-radius: 100px;
     }
     
     .aboutimgdiv {
         padding: 0px 0px !important;
+        text-align: right;
     }
     
     .aboutimg {
@@ -211,6 +227,7 @@
     
     #abouttext {
         font-size: 1.25rem;
+        padding-left: 5rem;
     }
     
     @media only screen and (max-width: 768px) and (min-width: 427px) {
@@ -236,6 +253,7 @@
         }
         #CEOmessage {
             display: flex;
+            padding-right: 0rem !important;
         }
         #ceotext {
             order: 1;
@@ -481,9 +499,18 @@
             padding: 1rem;
             padding-bottom: 2rem;
             height: auto;
+            top: 52%;
         }
         #IntroContent {
             text-align: left;
+            top: 0% !important;
+            font-size: 1.8rem;
+        }
+        .introline {
+            font-size: 2rem;
+        }
+        #CEOmessage {
+            padding-right: 1rem;
         }
         .borderb {
             margin-top: 0px;
